cdk8s/dist/glitter-boys-beta.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitter-boys-beta-lavalink
  namespace: glitter-boys-beta
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: glitter-boys-beta-lavalink-c8f6d1a8
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: glitter-boys-beta-lavalink-c8f6d1a8
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: America/Los_Angeles
            - name: SERVER_PORT
              value: "2333"
            - name: LAVALINK_SERVER_SOURCES_YOUTUBE
              value: "true"
            - name: LAVALINK_SERVER_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: glitter-boys-beta-lavalink-password
          image: ghcr.io/lavalink-devs/lavalink:4
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 2333
              name: port-2333
              protocol: TCP
            - containerPort: 80
              name: port-80
              protocol: TCP
            - containerPort: 443
              name: port-443
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: glitter-boys-beta-lavalink-service
  namespace: glitter-boys-beta
spec:
  externalIPs: []
  ports:
    - port: 2333
  selector:
    cdk8s.io/metadata.addr: glitter-boys-beta-lavalink-c8f6d1a8
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitter-boys-beta-glitter-backend
  namespace: glitter-boys-beta
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: glitter-boys-beta-glitter-backend-c8469dca
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: glitter-boys-beta-glitter-backend-c8469dca
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: America/Los_Angeles
            - name: APPLICATION_ID
              value: "1092616671388254248"
            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: access-key-id
                  name: glitter-boys-beta-aws-access-key
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: secret-access-key
                  name: glitter-boys-beta-aws-access-key
            - name: AWS_ENDPOINT_URL
              value: https://48948ed6cd40d73e34d27f0cc10e595f.r2.cloudflarestorage.com
            - name: AWS_REGION
              value: auto
            - name: DISCORD_TOKEN
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: glitter-boys-beta-discord-token
            - name: GUILD_ID
              value: "1092210479755178054"
            - name: LAVALINK_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: glitter-boys-beta-lavalink-password
            - name: LAVALINK_URL
              value: glitter-boys-beta-lavalink-service:2333
            - name: LEADERBOARD_ROLE_ID
              value: "1181388987164799036"
            - name: LEAGUE_CHANNEL_ID
              value: "1176684904923279390"
            - name: RIOT_API_TOKEN
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: glitter-boys-beta-riot-api-key
            - name: S3_BUCKET_NAME
              value: glitter-boys-beta
            - name: DATA_DIR
              value: /data
            - name: SENTRY_DSN
              value: https://bd27a021788f532b6c679d4977f5acc3@o92742.ingest.sentry.io/4506843178991616
          image: ghcr.io/shepherdjerred/glitter-boys:1.1.27
          imagePullPolicy: Always
          name: main
          ports:
            - containerPort: 8000
              name: port-8000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /data
              name: pvc-glitter-data-beta
            - mountPath: /workspace/packages/backend/players.json
              name: configmap-glitter-boys-beta-glitter-players
              subPath: players.json
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-glitter-data-beta
          persistentVolumeClaim:
            claimName: glitter-data-beta
            readOnly: false
        - configMap:
            items:
              - key: players.json
                path: players.json
            name: glitter-boys-beta-glitter-players
          name: configmap-glitter-boys-beta-glitter-players
---
apiVersion: v1
kind: Service
metadata:
  name: glitter-boys-beta-glitter-boys-service
  namespace: glitter-boys-beta
spec:
  externalIPs: []
  ports:
    - port: 8000
  selector:
    cdk8s.io/metadata.addr: glitter-boys-beta-glitter-backend-c8469dca
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    tailscale.com/funnel: "true"
  name: glitter-boys-beta-glitter-boys-ingress-ingress
  namespace: glitter-boys-beta
spec:
  defaultBackend:
    service:
      name: glitter-boys-beta-glitter-boys-service
      port:
        number: 8000
  ingressClassName: tailscale
  tls:
    - hosts:
        - glitter-boys-beta
