cdk8s/dist/grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
spec:
  defaultBackend:
    service:
      name: grafana-6f688bc46-t7hqp
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
