cdk8s/dist/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
spec:
  defaultBackend:
    service:
      name: immich-server
      port:
        number: 3001
  ingressClassName: tailscale
  tls:
    - hosts:
        - immich
