cdk8s/dist/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  defaultBackend:
    service:
      name: jenkins-server
      port:
        number: 8080
  ingressClassName: tailscale
  tls:
    - hosts:
        - jenkins
