cdk8s/dist/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  namespace: minio
spec:
  defaultBackend:
    service:
      name: minio
      port:
        number: 9000
  ingressClassName: tailscale
  tls:
    - hosts:
        - minio-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio
spec:
  defaultBackend:
    service:
      name: minio
      port:
        number: 9001
  ingressClassName: tailscale
  tls:
    - hosts:
        - minio-console
