cdk8s/dist/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
spec:
  defaultBackend:
    service:
      name: prometheus-kube-prometheus-prometheus
      port:
        number: 9090
  ingressClassName: tailscale
  tls:
    - hosts:
        - prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana
  namespace: prometheus
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
