cdk8s/dist/windmill-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: windmill-ingress
  namespace: windmill
spec:
  defaultBackend:
    service:
      name: windmill-server
      port:
        number: 3001
  ingressClassName: tailscale
  tls:
    - hosts:
        - windmill
